--- a/courses/templates/courses/home.html
+++ b/courses/templates/courses/home.html
@@ -1,4 +1,5 @@
 {% extends "courses/base.html" %} 
+{% load course_custom_tags %}
 
 {% block title %} 
 PyLearn | Python 線上學習資源
@@ -9,32 +10,63 @@ PyLearn | Python 線上學習資源
 <p> PyLearn 是一個線上學習資源，提供 Python 的教學影片、線上練習、以及線上測驗，讓你可以在家就能學習 Python。 </p>
 <h1 class="display-4"> 熱門課程 </h1>
 
-<div class="row">
-    {% for course in courses %}
-        <div class="col">
-            <div class="card mx-auto" style="width: 18rem;">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0a/Python.svg/640px-Python.svg.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">{{course}}</h5>
-                  <p class="card-text">{{course.description}}</p>
-                </div>
+<style>
+    .card-title{
+        font-size: 20px;
+        font-weight: bold;
+    }
+</style>
 
-                <div class="card-footer">
-                    <div>
-                        <div class="row no-gutters">
+<style>
+    .price{
+        font-size: 16px;
+        margin-bottom: 0px;
+    }
+</style>
+
+<style>
+    .discount{
+        font-size: 12px;
+        color: red;
+        margin-bottom: 0px;
+    }
+</style>
+
+<div class="container-fluid">
+    <br>
+    <div class="row">
+        {% for course in courses %}
+            <div class="col">
+                <div class="card mx-auto" style="width: 18rem;">
+                    <img src="{{ course.thumbnail.url }}" class="card-img-top" alt="{{ course.name }}">
+                    <div class="card-body">
+                      <h5 class="card-title">{{ course.name }}</h5>
+                      <p class="card-text">
+                        <span class="price">
+                            <del>{{ course.price | ntd }}</del>
+                            &nbsp;{% cal_sellprice course.price course.discount as value %} {{ value | ntd }}
+
+                        </span>
+                        <br>
+                        <span class="discount">現在買可省 {{ course.discount }}%</span>
+                      </p>
+                    </div>
+
+                    <div class="card-footer d-flex justify-content-center align-items-center">
+                        <div class="row">
                             <div class="col">
                                 <a href="#" class="btn btn-light btn-block">現在報名</a>
                             </div>
                             <div class="col">
-                                <a href="#" class="btn btn-light btn-block">更多資訊</a>
+                                <a href="/courses/{{course.slug}}" class="btn btn-light btn-block">更多資訊</a>
                             </div>
                         </div>
                     </div>
-                </div>
 
+                </div>
             </div>
-        </div>
-    {% endfor %}
+        {% endfor %}
+    </div>
 </div>
 
 {% endblock%}
