--- a/courses/templates/courses/base.html
+++ b/courses/templates/courses/base.html
@@ -15,7 +15,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">PyLearn</a>
+          <a class="navbar-brand" href="/">PyLearn</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -24,24 +24,27 @@
             <!-- left -->
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">回首頁</a> <!-- Assuming 'Courses' is the item you want on the left -->
+                <a class="nav-link" href="/">回首頁</a>
               </li>
             </ul>
     
             <!-- right -->
             <ul class="navbar-nav ms-auto">
+              {% if request.user.is_authenticated %}
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#"></a>
+                <a class="nav-link" >{{ request.user.username }}</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">功能</a>
+                <a class="nav-link" href="/logout">登出</a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="/login">登入</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">售價</a>
+                <a class="nav-link" href="/signup">註冊</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">不顯示</a>
-              </li>
+              {% endif %}
             </ul>
             
           </div>
@@ -53,6 +56,9 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+
+    {% block css %} {% endblock %}
+    {% block js %} {% endblock %}
   </body>
 
 </html>
