--- a/courses/templates/courses/home.html
+++ b/courses/templates/courses/home.html
@@ -6,31 +6,15 @@ PyLearn | Python 線上學習資源
 {%endblock %} 
 
 {% block content %}
+{% load static %}
+
+{% block css %}
+<link rel="stylesheet" href="{% static 'courses/css/common.css' %}">
+<link rel="stylesheet" href="{% static 'courses/css/scrollbar.css' %}">
+{% endblock  %}
+
 <h1> PyLearn | 線上 Python 學習資源 </h1>
 <p> PyLearn 是一個線上學習資源，提供 Python 的教學影片、線上練習、以及線上測驗，讓你可以在家就能學習 Python。 </p>
-<h1 class="display-4"> 熱門課程 </h1>
-
-<style>
-    .card-title{
-        font-size: 20px;
-        font-weight: bold;
-    }
-</style>
-
-<style>
-    .price{
-        font-size: 16px;
-        margin-bottom: 0px;
-    }
-</style>
-
-<style>
-    .discount{
-        font-size: 12px;
-        color: red;
-        margin-bottom: 0px;
-    }
-</style>
 
 <div class="container-fluid">
     <br>
@@ -67,6 +51,8 @@ PyLearn | Python 線上學習資源
             </div>
         {% endfor %}
     </div>
+    <br>
+    <br>
 </div>
 
 {% endblock%}
