--- a/courses/templates/courses/home.html
+++ b/courses/templates/courses/home.html
@@ -39,14 +39,13 @@ PyLearn | Python 線上學習資源
                     <div class="card-footer d-flex justify-content-center align-items-center">
                         <div class="row">
                             <div class="col">
-                                <a href="#" class="btn btn-light btn-block">現在報名</a>
+                                <a href="/check-out/{{course.slug}}" class="btn btn-light btn-block">現在報名</a>
                             </div>
                             <div class="col">
                                 <a href="/courses/{{course.slug}}" class="btn btn-light btn-block">更多資訊</a>
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         {% endfor %}
